--- a/index/main.html
+++ b/index/main.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин "SYMPTOM" - современные украшения из серебра и золота</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
+<!--
+    <script src="https://cdn.jsdelivr.net/npm/brython@3.8.10/brython.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/brython@3.8.10/brython_stdlib.js"></script>
+-->
 </head>
 <body>
+<!--<body onload="brython()">-->
     <div class="container">
         <div class="header">
             <a href="#" class="logo"><img src="img/logo_w.svg" alt="logo"></a>
@@ -21,10 +26,24 @@
                 </ul>
                 <p class="counter">1/4</p>
         </div>
-        <div class="scroll_1"></div>
-        <div class="scroll_2"></div>
-        <div class="scroll_3"></div>
-        <div class="scroll_4"></div>
+            <div class="scroll_1">
+                <p class="text_scroll_1_0">LIFE MAGAZINE</p>
+                <p class="text_scroll_1_1">VERY IMPORTAN INFORMATION (VERY IMPORTANT INFORMATION)</p>
+            </div>    
+            <div class="scroll_2">
+                <p class="text_scroll_2_0">50% OFF</p>
+                <p class="text_scroll_2_1">TODAY ONLY</p>
+                <p class="text_scroll_2_2">OTHER OBJECTS, ODOR OBJECTS, KOLCO CIGANSCOE, +5&nbsp;HP IF&nbsp;YOU HAVE LOW MANA (The following brands participate in&nbsp;the promotion).</p>
+            </div>
+            <div class="scroll_3">
+                <p class="text_scroll_3_0">NOT CONCEPT</p>
+                <p class="text_scroll_3_1">The concept is&nbsp;that there is&nbsp;no&nbsp;concept and this gives me&nbsp;complete freedom. I&nbsp;don&rsquo;t attach myself to&nbsp;anything, I&nbsp;have a&nbsp;lot of&nbsp;space for thought, because I&rsquo;m still at&nbsp;the beginning of&nbsp;the way: I&nbsp;study transforming and this is&nbsp;reflected in&nbsp;the design. I&nbsp;experiment a&nbsp;lot with forms, combine different textures and minerals. This technique can be&nbsp;seen in&nbsp;rings with large stones. They can not be&nbsp;repeated, because it&nbsp;uses natural stone, a&nbsp;copy of&nbsp;which can never be&nbsp;found. My&nbsp;jewelry is&nbsp;not distributed by&nbsp;gender&nbsp;&mdash; each time it&nbsp;warms my&nbsp;soul to&nbsp;see a&nbsp;guy with a&nbsp;cuff or&nbsp;ring of&nbsp;my&nbsp;design.</p>
+                <a href="#" class="text_scroll_3_2">NOW IN&nbsp;OUR STORE</a>
+            </div>
+            <div class="scroll_4">
+                <p class="text_scroll_4_0">MAKE YOUR OWN DESIGN</p>
+                <p class="text_scroll_4_1">Here you can order your own jewelry, which will be&nbsp;created according to&nbsp;your design. Together we&nbsp;will agree on&nbsp;the terms of&nbsp;reference, estimated dates and cost of&nbsp;the product, and then sign an&nbsp;agreement on&nbsp;its creation. We&nbsp;will help to&nbsp;realize any of&nbsp;your ideas&nbsp;&mdash; a&nbsp;jewelry can be&nbsp;made of&nbsp;silver or&nbsp;gold, using precious and semiprecious stones, engraving or&nbsp;using enamel. The cost of&nbsp;the product depends on&nbsp;the complexity of&nbsp;the work, as&nbsp;well as&nbsp;on&nbsp;the cost of&nbsp;the selected metals and precious and semiprecious stones, but what cannot be&nbsp;counted in&nbsp;money is&nbsp;the joy of&nbsp;jewelry that will only be&nbsp;with you or&nbsp;the person to&nbsp;whom you will give&nbsp;it.</p>
+            </div>
     </div>
 </body>
 </html>
@@ -58,4 +77,28 @@
                 </div> 
             </div>
 -->
- 
+
+
+<!-- JS script import
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <script src="../sonpScroll.js"></script>
+-->
+
+<!--
+    
+                <script type=text/javascript>
+                    $(document).bind( 'mousewheel', function (e) { 
+                    var nt = $(document.body).scrollTop()-(e.deltaY*e.deltaFactor*100); 
+                    e.preventDefault(); 
+                    e.stopPropagation(); 
+                    $(document.body).stop().animate( { 
+                            scrollTop : nt 
+                        } , 500 , 'easeInOutCubic' );  
+                    } )
+                </script>
+    
+-->
+
+
